better gui + func

--- a/frontend/src/app/info-collector/info-collector.component.html
+++ b/frontend/src/app/info-collector/info-collector.component.html
@@ -1,12 +1,14 @@
-<div class="container mx-auto h-full">
-  <mat-card>
-    <mat-card-title>
-      Please fill out the following info
-    </mat-card-title>
-    <mar-card-body>
-      <!-- <mat-form-filed>
-        
-      </mat-form-filed> -->
-    </mar-card-body>
-  </mat-card>
+<div class="container mx-auto">
+  <div class="max-w-md md:max-w-3xl mx-auto mt-2">
+    <mat-card>
+      <mat-card-title>
+        Please fill out the following info
+        <hr>
+      </mat-card-title>
+      <mat-card-content>
+        <app-collector-form>
+        </app-collector-form>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
