--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -5,9 +5,8 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="#" routerLink="/" (click)="drawer.toggle()">Home</a>
+      <a mat-list-item href="#" routerLink="/view" (click)="drawer.toggle()">View your Plan</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
