--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#" routerLink="/" (click)="drawer.toggle()">Home</a>
+      <a mat-list-item href="#" routerLink="/" (click)="drawer.toggle()">Edit your Plan</a>
       <a mat-list-item href="#" routerLink="/view" (click)="drawer.toggle()">View your Plan</a>
     </mat-nav-list>
   </mat-sidenav>
