--- a/frontend/src/app/view/view.component.html
+++ b/frontend/src/app/view/view.component.html
@@ -1,3 +1,5 @@
-<div class="container mx-auto">
-    
+<div class="container mx-auto grid-cols-1 lg:grid-cols-4 md:grid-cols-3 gap-2">
+    <mat-card>
+        <mat-card-title></mat-card-title>
+    </mat-card>
 </div>
